<resources>
    <string name="app_name">Augma</string>

    <!-- Strings for demonstration purposes -->
    <string name="demo_user_name">Burcu</string>
    <string name="demo_user_surname">Şahin</string>

    <!-- General Usage -->
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!-- User Interface Strings -->

    <!-- Transition names -->
    <string name="trans_logo">logoTrans</string>
    <string name="trans_username_edit_text">usernameTrans</string>
    <string name="trans_password_edit_text">passwordTrans</string>
    <string name="trans_initiate_button">initiateTrans</string>
    <string name="trans_profile_pic">ppicTrans</string>

    <!-- ui_login -->
    <string name="ui_login_username">username</string>
    <string name="ui_login_password">password</string>
    <string name="ui_login_login">login</string>
    <string name="ui_login_dont_have_account">Don\'t have an account?</string>
    <string name="ui_login_sign_up">Sign up!</string>

    <!-- ui_sign_up -->
    <string name="ui_sign_up_sign_up">sign up</string>
    <string name="ui_sign_up_repeat_password">repeat password</string>
    <string name="ui_sign_up_email">email</string>

    <!-- ui_map -->


    <!-- ui_drawer -->
    <string name="ui_drawer_circles">Circles</string>
    <string name="ui_drawer_settings">Settings</string>
    <string name="ui_drawer_log_out">Logout</string>
    <string name="ui_drawer_home">Map</string>

    <!-- ui main -->

    <!-- ui circle -->
    <string name="ui_circle_search">Search Circle</string>


    <string name="circle">
M527.023,71.8233 C780.213,71.8233,985.464,277.075,985.464,530.265
C985.464,783.455,780.213,988.707,527.023,988.707
C273.832,988.707,68.5809,783.455,68.5809,530.265
C68.5809,277.075,273.832,71.8233,527.023,71.8233 Z
  </string>
    <integer name="circle_original_width">1062</integer>
    <integer name="circle_original_height">1062</integer>


    <string name="wallapop">M874.323897,513.518484 C860.358769,445.332884 816.382769,412.921263
    805.267282,406.191832 C800.657846,403.400084 797.676103,399.358653 797.88841,392.435874
    C801.757128,267.085474 710.243077,158.867537 582.509333,159.174063 C500.917128,159.372126
    449.925538,194.844295 407.832,243.511242 C403.062154,249.028716 394.697231,248.443958
    388.219487,245.076884 C305.763897,202.332968 207.573949,231.137011 166.022974,310.371705
    C130.01559,379.038316 144.36759,457.320421 202.808821,508.302821 C208.923282,513.617516
    210.187692,522.950063 205.809436,529.764379 C154.784821,609.4848 177.973538,715.561768
    257.71159,766.5536 C301.140308,794.348463 354.773949,801.186358 403.746256,785.058358
    C412.384821,782.544842 418.650256,785.063074 422.839795,791.594442 C475.761026,869.508716
    581.966769,891.790821 661.275487,840.157642 C704.27959,812.16 732.742974,766.610189
    738.87159,715.679663 C739.626462,709.492547 743.735795,703.578947 749.779487,702.036884
    C867.836718,671.8464 884.052308,561.025347 874.323897,513.518484 L874.323897,513.518484 Z
    M684.063179,687.984084 C683.473436,709.638989 676.924923,730.600674 665.106462,748.761179
    C629.740718,803.1248 556.985231,818.521853 502.596718,783.172295 C448.212923,747.822737
    432.808821,675.095832 468.174564,620.727495 C475.581744,609.466189 472.397128,594.361516
    461.111795,587.042611 C449.826462,579.704842 434.342154,582.647495 427.005744,593.937095
    C401.193846,629.234779 389.229128,672.785095 394.371692,716.292968 C395.376615,724.753095
    389.644308,732.548295 381.274667,734.236547 C352.188513,740.126568 321.941744,735.278737
    296.134564,720.631495 C237.032821,687.0928 216.316308,612.026863 249.865641,552.938021
    C253.578667,546.401937 260.542359,542.450105 268.388308,544.477895 C283.509333,548.674947
    299.139897,550.693305 314.831795,550.547116 C327.188103,550.448084 337.114667,540.361011
    337.01559,528.000926 C336.916513,516.282189 327.758974,506.624253 316.053744,505.883874
    C293.964308,504.488 273.483692,499.748632 255.404513,486.964126 C200.129026,447.874947
    190.947897,375.662063 229.285949,323.340379 C265.873641,273.400168 339.294706,263.102494
    392.32445,305.252221 C392.557946,305.437801 394.130815,307.005964 394.371699,307.181664
    C404.775463,314.770126 422.862026,310.613648 428.736673,299.141666 C440.24375,276.656781
    458.521641,261.568253 468.075487,254.626611 C543.430564,199.885726 639.874872,207.945011
    700.349538,278.762021 C762.522667,351.564379 752.445128,457.796968 673.579897,521.469558
    C663.106051,529.924968 662.237949,545.755874 671.055795,555.946695 C679.43959,565.647074
    694.447385,567.340042 704.685333,559.615579 C731.558769,539.328253 756.507282,511.646568
    771.939692,481.7296 C773.345641,478.985011 775.737641,475.754695 778.398564,474.2032
    C786.183179,469.577011 796.180513,473.241179 800.799385,481.022232 C810.357949,497.159663
    818.708718,521.238484 819.793846,539.955453 C823.549333,604.698526 772.458667,660.344842
    707.700103,664.112758 C692.470564,664.706947 684.119795,673.341558 684.063179,687.984084 Z
  </string>
    <string name="post">Post!</string>

</resources>
