<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/loginPage"
    android:background="@drawable/background_gradient_anim"
    android:orientation="vertical"
    tools:context="world.augma.ui.login.UILogin">

    <TextView
        android:id="@+id/loginTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="150dp"
        android:fontFamily="@font/quesat"
        android:text="@string/app_name"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="35sp"
        android:transitionName="@string/trans_logo" />

    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="110dp">

        <EditText
            android:id="@+id/usernameField"
            android:drawablePadding="10dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ui_login_username"
            android:transitionName="@string/trans_username_edit_text"
            android:textColorHint="@color/colorPrimaryDark"
            android:textColor="@color/colorPrimaryDark"
            android:drawableStart="@drawable/ic_person_black_24dp"/>

        <EditText
            android:id="@+id/passwordField"
            android:drawablePadding="10dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ui_login_password"
            android:transitionName="@string/trans_password_edit_text"
            android:inputType="textPassword"
            android:textColorHint="@color/colorPrimaryDark"
            android:textColor="@color/colorPrimaryDark"
            android:drawableStart="@drawable/ic_lock_black_24dp" />

    </LinearLayout>

    <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
        android:id="@+id/initiateButton"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="50dp"
        android:textColor="@color/colorPrimary"
        android:text="@string/ui_login_login"
        android:layout_gravity="center"
        android:gravity="center"
        android:onClick="redirectToMainPage"
        android:transitionName="@string/trans_initiate_button"
        android:background="@color/colorPrimaryDark"
        android:textSize="16sp"
        app:spinning_bar_color="@color/colorPrimary"
        app:spinning_bar_padding="6dp"
        app:spinning_bar_width="4dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/ui_login_dont_have_account" />

        <TextView
            android:id="@+id/signUpButton"
            android:layout_width="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_height="wrap_content"
            android:text="@string/ui_login_sign_up"
            android:textSize="12sp"
            android:onClick="redirectToSignUp"
            android:textColor="@color/colorUILoginSignUp" />

    </LinearLayout>
</LinearLayout>
